nginx conf from prod

--- a/vpitt_uwsgi.ini
+++ b/vpitt_uwsgi.ini
@@ -3,7 +3,7 @@
 
 socket = 127.0.0.1:8003
 home = /home/shedule/venv
-chdir = /home/shedule/ttfront/
+chdir = /home/shedule/sheduleVPI/
 wsgi-file = vpitt/wsgi.py
 
 processes = 4
